Bug 159350 - Hiding Options dialog tabpages stopped working
Summary: Hiding Options dialog tabpages stopped working
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7.6.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog
  Show dependency treegraph
 
Reported: 2024-01-24 00:21 UTC by Gabor Kelemen (Collabora)
Modified: 2024-02-01 12:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example lockdown extension to hide Fonts and Internet settings (1.52 KB, application/vnd.openofficeorg.extension)
2024-01-24 00:21 UTC, Gabor Kelemen (Collabora)
Details
The Options dialog after installing the extension in 24.8master and 7.2 (234.91 KB, image/png)
2024-01-24 00:22 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-01-24 00:21:45 UTC
Created attachment 192133 [details]
Example lockdown extension to hide Fonts and Internet settings

I made an example extension to lock down pages in the Options dialog.
However it does not work with recent versions.

1. Install attached extension, restart LO
2. Go to Tools - Options
-> The LibreOffice - Fonts and the Internet category are visible, but they should not be.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ef6083200a4f28e43198c7a0878da6f4b880725f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

This used to work until 7.3 commit:

https://git.libreoffice.org/core/+/3ed7511eca99819012fc1baa490ef85963a9472e%5E%21/#F0

author	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Jul 26 15:21:35 2021 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Wed Jul 28 13:13:16 2021 +0200

simplify SvtOptionsDialogOptions

Adding CC to: Noel Grandin
Comment 1 Gabor Kelemen (Collabora) 2024-01-24 00:22:25 UTC
Created attachment 192134 [details]
The Options dialog after installing the extension in 24.8master and 7.2
Comment 2 Gabor Kelemen (Collabora) 2024-01-24 10:25:14 UTC
@Noel: I was looking for a test case before giving a try to replace SvtOptionsDialogOptions with officecfg calls, since it's only used in one file and in quite a static manner.
So please don't fix the SvtOptionsDialogOptions class quickly, maybe there is a better way by entirely getting rid of it.
Comment 3 Gabor Kelemen (Collabora) 2024-01-28 17:03:44 UTC
Checked the code, using officecfg is not a viable option here since the possible key names are not spelled out in the .xcs file.
Comment 4 Noel Grandin 2024-01-31 13:49:35 UTC
Fix here, thanks for the very good test-case

https://gerrit.libreoffice.org/c/core/+/162836
Comment 5 Commit Notification 2024-01-31 19:32:57 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8d9fba2ece350f82f307493b184447dbb44a971d

tdf#159350 Hiding Options dialog tabpages stopped working

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-02-01 10:59:46 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b573e50839c8671abc94ac53905b1b027a3807d7

tdf#159350 Hiding Options dialog tabpages stopped working

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-02-01 12:29:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7d0e37818bf8fcdf499670a618c64dd2f347dfe7

tdf#159350 Hiding Options dialog tabpages stopped working

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.