tdf#159350 Hiding Options dialog tabpages stopped working

regression from
    commit 3ed7511eca99819012fc1baa490ef85963a9472e
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Jul 26 15:21:35 2021 +0200
    simplify SvtOptionsDialogOptions

Change-Id: If300aefd3b249e64c15bc664ed16c00e743c2b80
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162836
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>